# No43_work_bi_PythonAll

./: .cursorignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: napkin.md
.claude/plans/: drifting-snuggling-aho.md  encapsulated-jingling-muffin.md  flickering-hatching-catmull.md  floofy-tinkering-lobster.md  iridescent-soaring-key.md  sprightly-seeking-brooks.md  stateless-splashing-emerson.md  swirling-sauteeing-cloud.md
.codex/: skills
.reports/: codemap-diff.txt
assets/: 00-reset.css  01-typography.css  02-layout.css  03-components.css  04-animations.css  05-charts.css  06-login.css
backend/: __init__.py
backend/config/: README.md  csv_datasets.yaml  domo_datasets.yaml
backend/data_sources/: __init__.py
backend/etl/: __init__.py  base_etl.py  etl_api.py  etl_csv.py  etl_domo.py  etl_rds.py  etl_s3.py  resolve_csv_path.py
backend/scripts/: __init__.py  clear_dataset.py  load_csv.py  load_cursor_usage.py  load_domo.py
codemaps/: architecture.md  backend.md  data.md  frontend.md
docs/: CONTRIB.md  RUNBOOK.md  architecture.md  tech-spec.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  frontend.md
scripts/: upload_csv.py
src/: callbacks.py  layout.py
src/auth/: basic_auth.py  flask_login_setup.py  layout_callbacks.py  login_callbacks.py  login_layout.py  providers.py
src/charts/: plotly_theme.py  templates.py
src/components/: cards.py  filters.py  sidebar.py  sidebar_callbacks.py
src/core/: cache.py
tests/: __init__.py  conftest.py
(+103 files in other folders)
