[project]
name = "bi-dash"
version = "0.1.0"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::Warning:boto3.compat",
    "ignore::DeprecationWarning:dash.development.base_component",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
allow_untyped_calls = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true
